// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | ListWithTitles Integration List With Titles With Left And Right Titles 1`] = `
.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  margin-bottom: 4px;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          title1
        </span>
      </div>
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          title2
        </span>
      </div>
    </div>
  </div>
  <ol
    className="c4"
  >
    <li
      className="c5"
    >
      <div
        className="c1"
      >
        <div>
          Left List Item 1
        </div>
        <div>
          Right List Item 1
        </div>
      </div>
    </li>
    <li
      className="c5"
    >
      <div
        className="c1"
      >
        <div>
          Left List Item 2
        </div>
        <div>
          Right List Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Molecules | ListWithTitles Integration List With Titles With Left Title 1`] = `
.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  margin-bottom: 4px;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          title1
        </span>
      </div>
      <div
        className="c2"
      >
        <span
          className="c3"
        />
      </div>
    </div>
  </div>
  <ol
    className="c4"
  >
    <li
      className="c5"
    >
      <div
        className="c1"
      >
        <div>
          Left List Item 1
        </div>
        <div>
          Right List Item 1
        </div>
      </div>
    </li>
    <li
      className="c5"
    >
      <div
        className="c1"
      >
        <div>
          Left List Item 2
        </div>
        <div>
          Right List Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Storyshots Molecules | ListWithTitles Integration List With Titles With No Titles 1`] = `
.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c1 {
  display: block;
}

<ol
  className="c0"
>
  <li
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        Left List Item 1
      </div>
      <div>
        Right List Item 1
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
    >
      <div>
        Left List Item 2
      </div>
      <div>
        Right List Item 2
      </div>
    </div>
  </li>
</ol>
`;

exports[`Storyshots Molecules | ListWithTitles Integration List With Titles With Right Title 1`] = `
.c2 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: block;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  margin-bottom: 4px;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <span
          className="c3"
        />
      </div>
      <div
        className="c2"
      >
        <span
          className="c3"
        >
          title1
        </span>
      </div>
    </div>
  </div>
  <ol
    className="c4"
  >
    <li
      className="c5"
    >
      <div
        className="c1"
      >
        <div>
          Left List Item 1
        </div>
        <div>
          Right List Item 1
        </div>
      </div>
    </li>
    <li
      className="c5"
    >
      <div
        className="c1"
      >
        <div>
          Left List Item 2
        </div>
        <div>
          Right List Item 2
        </div>
      </div>
    </li>
  </ol>
</div>
`;
